Replace deprecated Class.newInstance() with Constructor.newInstance()
Class.newInstance() is deprecated since Java 9 because it hides
checked exceptions and bypasses compile-time exception checking.